@@ -10,6 +10,8 @@
 - Core:
   . Fixed bug #48484 (array_product() always returns 0 for an empty array).
     (Ilia)
+  . Fixed bug #48607 (fwrite() doesn't check reply from ftp server before
+    exiting). (Ilia)
   
 - Filter extension:
   . Fixed bug #53150 (FILTER_FLAG_NO_RES_RANGE is missing some IP ranges).
